force-app/main/default/objects/Quote/fields/Approval_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Approval_Triggers__c</fullName>
    <description>JSON list of the line items and matrix rules that caused the current approval. Written on every submit (overwrites the previous one), kept after approve/reject for audit. Read by createQuote to highlight the triggering rows.</description>
    <inlineHelpText>Which product lines on this quote caused it to need approval, and under which rule.</inlineHelpText>
    <label>Approval Triggers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>