force-app/main/default/objects/Quote/fields/IM_Currency__c.field-meta.xml
<CustomField>
    <fullName>IM_Currency__c</fullName>
    <description>Currency the International Marketing offer is quoted, saved and printed in. Rate-card base values are converted with IM_Exchange_Rate__c at save. INR = rate 1. Add currencies here; no other setup needed.</description>
    <inlineHelpText>Currency of this offer. Pick INR for a rupee offer (no conversion). The list is maintained by the admin.</inlineHelpText>
    <label>IM Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD - US Dollar</fullName>
            </value>
            <value>
                <fullName>INR - Indian Rupee</fullName>
            </value>
            <value>
                <fullName>EUR - Euro</fullName>
            </value>
            <value>
                <fullName>GBP - Pound Sterling</fullName>
            </value>
            <value>
                <fullName>CNY - Chinese Yuan</fullName>
            </value>
            <value>
                <fullName>RUB - Russian Ruble</fullName>
            </value>
            <value>
                <fullName>JPY - Japanese Yen</fullName>
            </value>
            <value>
                <fullName>AED - UAE Dirham</fullName>
            </value>
            <value>
                <fullName>SAR - Saudi Riyal</fullName>
            </value>
            <value>
                <fullName>AUD - Australian Dollar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>