force-app/main/default/objects/Quote/fields/Is_Draft__c.field-meta.xml
<CustomField>
    <fullName>Is_Draft__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE when the quotation was saved with the Save as Draft button and has not been applied yet. Cleared by APPLY. Drives the DRAFT badge and the same-department draft check on CREATE.</description>
    <inlineHelpText>This quotation was saved as a draft and has not been applied yet.</inlineHelpText>
    <label>Is Draft</label>
    <type>Checkbox</type>
</CustomField>